--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5" class=""></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
+      <div class="carousel-item" id="carousel-item1">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" id="Placeholder: First slide1" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
   
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
@@ -155,7 +155,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid ">
+  <div class="container-fluid">
   <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
@@ -167,16 +167,56 @@
       <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" disabled>Disabled</button>
+      <button class="nav-link" id="pills-about-tab" data-bs-toggle="pill" data-bs-target="#pills-about" type="button" role="tab" aria-controls="pills-about" aria-selected="false">About</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="pills-role-tab" data-bs-toggle="pill" data-bs-target="#pills-role" type="button" role="tab" aria-controls="pills-role" aria-selected="false">Role</button>
     </li>
   </ul>
   <div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora suscipit dicta, voluptas aut beatae saepe molestias aspernatur corrupti soluta ut quo nulla commodi, numquam necessitatibus assumenda magnam molestiae vero sunt.</div>
-    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita dolorem eum reiciendis optio sed sunt, eaque suscipit nisi sit aperiam sint numquam vitae in fugiat adipisci? Voluptas veritatis culpa neque?</div>
-    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse saepe autem aperiam laborum modi. Asperiores perspiciatis ad quam omnis, dignissimos consectetur cum reiciendis cumque beatae, veniam eligendi dicta iure doloremque.</div>
-    <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quam perferendis, alias totam vitae veritatis error. Quasi magnam ratione corrupti ut! Facilis repellat dolores non nesciunt voluptates error voluptate magni!</div>
+    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora suscipit dicta, voluptas aut beatae saepe molestias aspernatur corrupti soluta ut quo nulla commodi, numquam necessitatibus assumenda magnam molestiae vero sunt.
+      <br>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="tab-button" aria-label="Slide 1">
+        Search
+      </button>
+    </div>
+    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita dolorem eum reiciendis optio sed sunt, eaque suscipit nisi sit aperiam sint numquam vitae in fugiat adipisci? Voluptas veritatis culpa neque?
+      <br>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" class="tab-button tab-button1" aria-label="Slide 2">
+        Search
+      </button>
+    </div>
+    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse saepe autem aperiam laborum modi. Asperiores perspiciatis ad quam omnis, dignissimos consectetur cum reiciendis cumque beatae, veniam eligendi dicta iure doloremque.
+      <br>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" class="tab-button tab-button2" aria-label="Slide 3">
+        Search
+      </button>
+    </div>
+    <div class="tab-pane fade" id="pills-about" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse saepe autem aperiam laborum modi. Asperiores perspiciatis ad quam omnis, dignissimos consectetur cum reiciendis cumque beatae, veniam eligendi dicta iure doloremque.
+      <br>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" class="tab-button tab-button3" aria-label="Slide 4">
+        Search
+      </button>
+    </div>
+    <div class="tab-pane fade" id="pills-role" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse saepe autem aperiam laborum modi. Asperiores perspiciatis ad quam omnis, dignissimos consectetur cum reiciendis cumque beatae, veniam eligendi dicta iure doloremque.
+      <br>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" class="tab-button tab-button4" aria-label="Slide 5">
+        Search
+      </button>
+    </div>
   </nav>
   </div>
+</div>
+</div>
+<div class="callback_form">
+  <div class="callback">
+    Callback form
+  </div>
+  <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
+  <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
+  <button type="button" class="tab-button tab-button5">
+    Search
+  </button>
 </div>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
