--- a/index.html
+++ b/index.html
@@ -177,25 +177,25 @@
     <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora suscipit dicta, voluptas aut beatae saepe molestias aspernatur corrupti soluta ut quo nulla commodi, numquam necessitatibus assumenda magnam molestiae vero sunt.
       <br>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="tab-button" aria-label="Slide 1">
-        Search
+        Modal popup
       </button>
     </div>
     <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita dolorem eum reiciendis optio sed sunt, eaque suscipit nisi sit aperiam sint numquam vitae in fugiat adipisci? Voluptas veritatis culpa neque?
       <br>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" class="tab-button tab-button1" aria-label="Slide 2">
-        Search
+        Modal popup
       </button>
     </div>
     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse saepe autem aperiam laborum modi. Asperiores perspiciatis ad quam omnis, dignissimos consectetur cum reiciendis cumque beatae, veniam eligendi dicta iure doloremque.
       <br>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" class="tab-button tab-button2" aria-label="Slide 3">
-        Search
+        Modal popup
       </button>
     </div>
     <div class="tab-pane fade" id="pills-about" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse saepe autem aperiam laborum modi. Asperiores perspiciatis ad quam omnis, dignissimos consectetur cum reiciendis cumque beatae, veniam eligendi dicta iure doloremque.
       <br>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" class="tab-button tab-button3" aria-label="Slide 4">
-        Search
+        Modal popup
       </button>
     </div>
     <div class="tab-pane fade" id="pills-role" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse saepe autem aperiam laborum modi. Asperiores perspiciatis ad quam omnis, dignissimos consectetur cum reiciendis cumque beatae, veniam eligendi dicta iure doloremque.
@@ -212,11 +212,37 @@
   <div class="callback">
     Callback form
   </div>
-  <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
-  <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
+  <input class="form-control form-control-lg" type="text" placeholder="Name" aria-label=".form-control-lg example">
+  <input class="form-control" type="text" placeholder="Phone" aria-label="default input example">
   <button type="button" class="tab-button tab-button5">
-    Search
+    Submit
   </button>
+</div>
+<div class="cards">
+  <div class="card" style="width: 18rem;">
+    <img src="/img/place-2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="/img/place-3.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="/img/place-1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="/img/place-4.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
 </div>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
