--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ display:inline-block;
 .btn-primary1{
   margin-left: 1570px;
 }
+.tab-content>.active {
+    margin-left: 40px;
+    display: block;
+}
 </style>
 <body>
   <header>
@@ -253,7 +257,7 @@ display:inline-block;
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  <div class="con">
   <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
